--- a/helm-sources/values.yaml
+++ b/helm-sources/values.yaml
@@ -3,6 +3,4 @@
 # Declare variables to be passed into your templates.
 
 ##fdk-dataset-harvester-etl
-FDK_DATASET_ETL_MEMORY: "1000Mi"
-NAMESPACE: staging
-DATASET_ETL_IMAGE: eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:latest
+FDK_DATASET_HARVESTER_ETL_MEMORY: "1000Mi"
