--- a/helm-sources/Chart.yaml
+++ b/helm-sources/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
-description: Config for Dataset etl
+description: Config for Dataset harvester etl
 name: fdk-dataset-harvester-etl
 version: 0.1.0
 home: https://github.com/Informasjonsforvaltning/fdk-dataset-harvester-etl
