--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -28,7 +28,7 @@ jobs:
       - run: gcloud auth configure-docker
 
       - name: Build Docker image with GitHub commit sha tag and staging tag
-        run: docker build . -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:latest
+        run: docker build . -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:latest -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA
 
       - name: Publish docker image to Google Cloud
         run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl
@@ -41,7 +41,7 @@ jobs:
             helm init --client-only
             helm repo add fdk-dataset-harvester-etl https://informasjonsforvaltning.github.io/fdk-dataset-harvester-etl/
             helm fetch --untar --untardir ./helm fdk-dataset-harvester-etl/fdk-dataset-harvester-etl
-            helm template ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
+            helm template --set DOCKER_IMAGE_NAME="eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA" -f ./helm-sources/values/prod.yaml ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
             chmod o+w ./kubectlapply.yaml
             cat kubectlapply.yaml
 
