chore: etl finished

--- a/helm-sources/templates/deployment.yaml
+++ b/helm-sources/templates/deployment.yaml
@@ -21,11 +21,23 @@ spec:
     spec:
       containers:
       - env:
-        - name: DATASERVICE_HARVESTER_BASE_URI
+        - name: TO_BE_UPDATED
+          value: {{ required "Missing value TO_BE_UPDATED" .Values.TO_BE_UPDATED | quote }}
+        - name: MONGO_USERNAME
           valueFrom:
             secretKeyRef:
-              name: commonurl-{{ required "Missing value NAMESPACE" .Values.NAMESPACE }}
-              key: FDK_DATASERVICE_HARVESTER_BASE_URI
+              name: mongo-{{ required "Missing value NAMESPACE" .Values.NAMESPACE }}
+              key: MONGO_USERNAME
+        - name: MONGO_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongo-{{ required "Missing value NAMESPACE" .Values.NAMESPACE }}
+              key: MONGO_PASSWORD
+        - name: NAMESPACE
+          valueFrom:
+            secretKeyRef:
+              name: common-{{ required "Missing value NAMESPACE" .Values.NAMESPACE }}
+              key: NAMESPACE
         image: {{ required "Missing value DOCKER_IMAGE_NAME" .Values.DOCKER_IMAGE_NAME }}
         imagePullPolicy: Always
         name: fdk-dataset-harvester-etl
