--- a/.github/workflows/deploy-demo.yaml
+++ b/.github/workflows/deploy-demo.yaml
@@ -3,7 +3,7 @@ name: Build and deploy to demo when merged to master
 on:
   push:
     branches:
-      - never
+      - no
 
 jobs:
   build-and-deploy:
@@ -19,9 +19,8 @@ jobs:
           python-version: 3.7
 
     - name: Setup gcloud CLI
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      uses: google-github-actions/setup-gcloud@master
       with:
-        version: '270.0.0'
         service_account_email: ${{ secrets.GCP_SA_DIGDIR_FDK_GCR_EMAIL }}
         service_account_key: ${{ secrets.GCP_SA_DIGDIR_FDK_GCR_KEY }}
 
@@ -31,19 +30,15 @@ jobs:
       run: docker build . -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:latest -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA
 
     - name: Publish docker image to Google Cloud
-      run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl
+      run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl -a
 
     - name: Apply Helm template
-      uses: stefanprodan/kube-tools@v1
-      with:
-        helm: 2.14.3
-        command: |
-          helm init --client-only
-          helm repo add fdk-dataset-harvester-etl https://informasjonsforvaltning.github.io/fdk-dataset-harvester-etl/
-          helm fetch --untar --untardir ./helm fdk-dataset-harvester-etl/fdk-dataset-harvester-etl
-          helm template --set DOCKER_IMAGE_NAME="eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA" -f ./helm-sources/values/demo.yaml ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
-          chmod o+w ./kubectlapply.yaml
-          cat kubectlapply.yaml
+      run: |
+        helm repo add fdk-dataset-harvester-etl https://informasjonsforvaltning.github.io/fdk-dataset-harvester-etl/
+        helm fetch --untar --untardir ./helm fdk-dataset-harvester-etl/fdk-dataset-harvester-etl
+        helm template --set DOCKER_IMAGE_NAME="eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA" -f ./helm-sources/values/demo.yaml ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
+        chmod o+w ./kubectlapply.yaml
+        cat kubectlapply.yaml
 
     - name: Get kubeconfig file from GKE
       uses: machine-learning-apps/gke-kubeconfig@master
