--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -3,7 +3,7 @@ name: Build and deploy to prod when merged to master
 on:
   push:
     branches:
-      - master
+      - no
 
 jobs:
   build-and-deploy:
@@ -11,39 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Setup pyhton environment
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: 3.7
 
       - name: Setup gcloud CLI
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@master
         with:
-          version: '270.0.0'
           service_account_email: ${{ secrets.GCP_SA_DIGDIR_FDK_GCR_EMAIL }}
           service_account_key: ${{ secrets.GCP_SA_DIGDIR_FDK_GCR_KEY }}
 
-      - run: gcloud auth configure-docker
+      - run: gcloud auth configure-docker eu.gcr.io
 
       - name: Build Docker image with GitHub commit sha tag and staging tag
         run: docker build . -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:latest -t eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA
 
       - name: Publish docker image to Google Cloud
-        run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl
+        run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl -a
 
       - name: Apply Helm template
-        uses: stefanprodan/kube-tools@v1
-        with:
-          helm: 2.14.3
-          command: |
-            helm init --client-only
-            helm repo add fdk-dataset-harvester-etl https://informasjonsforvaltning.github.io/fdk-dataset-harvester-etl/
-            helm fetch --untar --untardir ./helm fdk-dataset-harvester-etl/fdk-dataset-harvester-etl
-            helm template --set DOCKER_IMAGE_NAME="eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA" -f ./helm-sources/values/prod.yaml ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
-            chmod o+w ./kubectlapply.yaml
-            cat kubectlapply.yaml
+        run: |
+          helm repo add fdk-dataset-harvester-etl https://informasjonsforvaltning.github.io/fdk-dataset-harvester-etl/
+          helm fetch --untar --untardir ./helm fdk-dataset-harvester-etl/fdk-dataset-harvester-etl
+          helm template --set DOCKER_IMAGE_NAME="eu.gcr.io/digdir-fdk-infra/fdk-dataset-harvester-etl:$GITHUB_SHA" -f ./helm-sources/values/prod.yaml ./helm/fdk-dataset-harvester-etl/ > ./kubectlapply.yaml
+          chmod o+w ./kubectlapply.yaml
+          cat kubectlapply.yaml
 
       - name: Get kubeconfig file from GKE
         uses: machine-learning-apps/gke-kubeconfig@master
@@ -53,7 +48,7 @@ jobs:
           location_zone: europe-north1-a
           cluster_name: digdir-fdk-prod
 
-      - name: Deploy to staging
+      - name: Deploy to prod
         uses: docker://bitnami/kubectl:latest
         env:
           KUBECONFIG: '/github/workspace/.kube/config'
